--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,8 @@ img {
     text-decoration: none;
     
     color: var(--primary-text-color);
+
+    transition: backgraund-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link:hover,
@@ -173,6 +175,8 @@ img {
     text-decoration: none;
 
     color: var(--title-text-color);
+
+    transition: backgraund-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -509,6 +513,8 @@ img {
     height: 44px;
     color: #AFB1B8;
     border-radius: 50%;
+
+    transition: backgraund-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-icon {
@@ -549,6 +555,8 @@ img {
     
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+
+    
 }
 
 .partner-list .item:not(:last-child) {
@@ -756,6 +764,9 @@ img {
     line-height: 1.63;
     text-align: center;
     align-items: center;
+
+
+    transition: backgraund-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -907,35 +918,39 @@ img {
 
 .projects-img {
     position: relative;
+       
 }
 
 .projects-img::before {
+    position: absolute;
     display: inline-block;
     content: "";
-    position: absolute;
+    
     top: 0;
     width: 100%;
     height: 100%;
   
-    
     background: rgba(33, 150, 243, 0.9);
 
     opacity: 0;
+
+   
 }
 
-.projects-img:hover::before{
+.projects-img:hover::before {
     opacity: 1;
 }
 
 
 .projects-text {
     position: absolute;
+    display: block;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 
-    margin: 63px 24px;
+    padding: 63px 24px;
 
     font-weight: 400;
     font-size: 18px;
@@ -976,21 +991,35 @@ img {
     width: 528px;
     height: 581px;
        
-    border-radius: 4px;
+    border-radius: 4px; 
 
     background-color: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    
 }
 
 .button-close {
-    position: absolute;
-
-    right: 14px;
-    top: 14px;
-    width: 18px;
-    height: 18px;
+    
+    width: 11px;
+    height: 11px;
 
    
-    border-radius: 1px solid rgba(0, 0, 0, 0.1);
+    
+}
 
-    color: #000000;
+.close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background: transparent;
+    cursor: pointer;
+
 }
