--- a/css/styles.css
+++ b/css/styles.css
@@ -432,17 +432,10 @@ img {
 }
 
 /* Позиционирование -Занятие- */
+
 .caption-img {
     position: relative;
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    
-    color: var(--primary-white-color);
 }
 
 .work-name {
@@ -452,6 +445,16 @@ img {
     width: 100%;
     right: 50%;
     left: 50%;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: var(--primary-white-color);
+
     transform: translate(-50%, -50%);
    
 }
@@ -543,7 +546,7 @@ img {
     color: var(--svg-icon-color-gray);
     border-radius: 50%;
 
-    transition: backgraund-color var(--animation-transition), color var(--animation-transition);
+    transition: color var(--animation-transition), backgraund-color var(--animation-transition);
 }
 
 .team-social-icon {
@@ -745,10 +748,14 @@ img {
 
     width: 44px;
     height: 44px;
+
+    transition: background-color var(--animation-transition), box-shadow var(--animation-transition);
 }
 
 .list-social-icon .link {
     color: var(--svg-icon-color-gray);
+
+    transition: color var(--animation-transition);
  
 }
 
@@ -1002,8 +1009,12 @@ img {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
+    
     opacity: 1;
-    transition: opacity var(--animation-transition);
+    visibility: visible;
+    pointer-events: initial;
+
+    transition: opacity var(--animation-transition), visibility var(--animation-transition);
 }
 
 .backdrop.is-hidden {
