--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
     --primary-white-color: #FFFFFF;
     --secondary-bg-gray-color: #2F303A;
     --secondary-dg-but-color: #F5F4FA;
-    --animation-transition: 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --animation-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     --svg-icon-color-gray: #AFB1B8;
 }
 
@@ -1100,7 +1100,7 @@ img {
 
 /* Форма */
 
-.form-application {
-    width: 448px;
-    height: 342px;
+.form-field {
+    outline: 1px solid orange;
+    
 }
