--- a/css/styles.css
+++ b/css/styles.css
@@ -1191,15 +1191,50 @@ img {
 }
 
 .form-field input {
+   
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    outline: transparent
 }
 
 
-.form-field input:focus {
-    border: #2196F3;
+
+.form-field input:focus + .form-icon {
+   
+    fill: #2196F3;
+    
+    
 }
+
+.form-input-icon input:focus {
+    color: #2196F3;
+}
+
+
+.form-input-icon {
+    display: flex;
+    position: relative;
+    
+}
+
+.form-input {
+    width: 100%;
+    padding-left: 42px;
+   
+}
+
+
+
+
+.form-icon {
+    position: absolute;
+    
+    top: 11px;
+    left: 12px;
+    fill: currentColor;
+}
+
 
 
 
@@ -1221,15 +1256,22 @@ img {
 }
 
 .form-comment textarea {
-    padding: 0;
+    padding: 12px 16px;
     margin: 0;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    outline:transparent;
+
 }
 
+.form-comment textarea:focus {
+    color: #2196F3;
+    
+}
+
+
 .form-comment textarea::placeholder {
-    padding-top: 12px;
-    padding-left: 16px;
+    
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
@@ -1242,24 +1284,37 @@ img {
 .checkbox {
     display: flex;
     justify-content: center;
-    text-align: center;
-    width: 425px;
-    height: 24px;
-    margin-left: 52px;
-    margin-right: 51px;
     margin-bottom: 30px;
     
 }
 
 .chec-agry {
     margin-left: 8.38px;
-   
+
     padding: 0;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.72;
     letter-spacing: 0.03em;
     color: #757575;
+}
+
+.chec-agry-link {
+    color: #2196F3;
+}
+
+.chec-icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid #212121;
+    border-radius: 2px;
+}
+
+.checkbox:checked + .chec-icon {
+    background-color: #2196F3;
+    border: #2196F3;
+
 }
 
 
